update pages on table features

--- a/src/app/user/user_admin.html
+++ b/src/app/user/user_admin.html
@@ -9,7 +9,7 @@
                             <form role="form">
                                 <div class="form-group">
                                     <label>手机号码：</label>
-                                    <input class="form-control" placeholder="输入手机号码..." id="phone_number" ng-model="searchPhoneNumber" ng-change="searchUserListByPhone()">
+                                    <input class="form-control" placeholder="输入手机号码..." ng-model="searchPhoneNumber" ng-change="searchUserListByPhone()">
                                 </div>
                             </form>
                         </div>
