--- a/src/app/category/first_level_category.html
+++ b/src/app/category/first_level_category.html
@@ -9,14 +9,7 @@
                             <form role="form">
                                 <div class="form-group">
                                     <label>分类名：</label>
-                                    <input class="form-control" placeholder="输入分类名...">
-                                </div>
-                            </form>
-                        </div>
-                        <div class="col-lg-6">
-                            <form role="form" style="text-align: right">
-                                <div class="form-group">
-                                    <button type="button" class="btn btn-primary">搜索</button>
+                                    <input class="form-control" placeholder="输入分类名..." ng-model="firstCategorySearch" ng-change="searchByCategory()">
                                 </div>
                             </form>
                         </div>
@@ -33,21 +26,46 @@
                                     </tr>
                                     </thead>
                                     <tbody>
-                                    <tr>
-                                        <td>语言</td>
-                                        <td>2016-10-10 10:50:59</td>
-                                        <td class="center"><button class="btn btn-yahoo">删除</button></td>
+                                    <tr ng-show="firstLevelCategoryItems==null">
+                                        <td colspan="5" style="background-color: #ffffff">
+                                            <div id="loadingScreen">
+                                                <img src="img/loading_icon.gif" style="position: relative; margin: auto;">
+                                            </div>
+                                        </td>
                                     </tr>
-                                    <tr>
-                                        <td>社会</td>
-                                        <td>2016-10-10 10:50:59</td>
-                                        <td class="center"><button class="btn btn-yahoo">删除</button></td>
+                                    <tr ng-repeat="item in firstLevelCategoryItems" multiple-select-item="firstLevelCategoryItems">
+                                        <td ng-bind="item.firstCategoryName"></td>
+                                        <td ng-bind="item.modifyDate | date:'yyyy-MM-dd HH:mm:ss'"></td>
+                                        <td><button class="btn" data-toggle="modal" data-target="#delete" ng-model="selectedFirstLevelCategoryID" ng-click="deleteItem(item)">删除</button></td>
                                     </tr>
-                                    <tr>
-                                        <td>语言</td>
-                                        <td>2016-10-10 10:50:59</td>
-                                        <td class="center"><button class="btn btn-yahoo">删除</button></td>
-                                    </tr>
+                                    <div class="modal fade" id="delete" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                                        <div class="modal-dialog">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                                                    <h4 class="modal-title" id="myModalLabel">删除信息如下：</h4>
+                                                </div>
+                                                <div class="modal-body">
+                                                    <p>
+                                                        <label>ID:</label>
+                                                        <label ng-bind="selectedFirstLevelCategoryID"></label>
+                                                    </p>
+                                                    <p>
+                                                        <label>一级分类名:</label>
+                                                        <label ng-bind="selectedFirstLevelCategoryItem.firstCategoryName"></label>
+                                                    </p>
+                                                    <p>
+                                                        <label>修改日期:</label>
+                                                        <label ng-bind="selectedFirstLevelCategoryItem.modifyDate | date:'yyyy-MM-dd HH:mm:ss'"></label>
+                                                    </p>
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                                                    <button type="button" class="btn btn-primary">确定</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                     </tbody>
                                 </table>
                             </div>
@@ -58,12 +76,12 @@
                             <form role="form">
                                 <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">新增一级分类</button>
 
-                                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="modalLabelNew" aria-hidden="true">
                                     <div class="modal-dialog">
                                         <div class="modal-content">
                                             <div class="modal-header">
                                                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                                                <h4 class="modal-title" id="myModalLabel">新增/修改一级分类</h4>
+                                                <h4 class="modal-title" id="modalLabelNew">新增/修改一级分类</h4>
                                             </div>
                                             <div class="modal-body">
                                                 <div class="row">
