--- a/src/app/product/product_list.html
+++ b/src/app/product/product_list.html
@@ -113,7 +113,7 @@
                                 <table class="table table-striped table-bordered table-hover">
                                     <thead>
                                         <tr>
-                                            <th><input type="checkbox" ng-model="checkAll" ng-click="checkALLYesNo()"></th>
+                                            <th><input type="checkbox" ng-model="checkAll" ng-click="checkALLYesNo()" id="allCheckControl"></th>
                                             <th>产品封面图</th>
                                             <th>产品名</th>
                                             <th>产品发布状态</th>
@@ -131,7 +131,7 @@
                                             </td>
                                         </tr>
                                         <tr ng-repeat="item in productItems" multiple-select-item="productItems">
-                                            <td><input type="checkbox" ng-model="selectedCheck" name="mySelectedProduct" ng-click="checkItem(item.id)" checked="checked"></td>
+                                            <td><input type="checkbox" ng-model="item.checked" name="mySelectedProduct" ng-click="checkItem(item)"></td>
                                             <td ng-bind="item.cover"></td>
                                             <td><a href="#new_ar_product_detail/{{item.id}}" ng-bind="item.productName"></a></td>
                                             <td ng-bind="item.releaseState"></td>
