--- a/src/app/category/second_level_category.html
+++ b/src/app/category/second_level_category.html
@@ -9,7 +9,7 @@
                             <form role="form">
                                 <div class="form-group">
                                     <label for="product_category">所属一级分类:</label>
-                                    <select class="form-control" id="product_category">
+                                    <select class="form-control" id="product_category" ng-modal="firstCategorySelected" ng-change="searchByCategory()">
                                         <option>全部</option>
                                         <option>语言</option>
                                     </select>
@@ -20,14 +20,7 @@
                             <form role="form">
                                 <div class="form-group">
                                     <label>分类名：</label>
-                                    <input class="form-control" placeholder="输入分类名...">
-                                </div>
-                            </form>
-                        </div>
-                        <div class="col-lg-4">
-                            <form role="form" style="text-align: right">
-                                <div class="form-group">
-                                    <button type="button" class="btn btn-primary">搜索</button>
+                                    <input class="form-control" placeholder="输入分类名..." ng-modal="secondCategorySelected" ng-change="searchByCategory()">
                                 </div>
                             </form>
                         </div>
@@ -37,32 +30,59 @@
                             <div class="table-responsive">
                                 <table class="table table-striped table-bordered table-hover">
                                     <thead>
-                                    <tr>
-                                        <th>一级分类名</th>
-                                        <th>二级分类名</th>
-                                        <th>修改时间</th>
-                                        <th>操作</th>
-                                    </tr>
+                                        <tr>
+                                            <th>一级分类名</th>
+                                            <th>二级分类名</th>
+                                            <th>修改时间</th>
+                                            <th>操作</th>
+                                        </tr>
                                     </thead>
                                     <tbody>
-                                    <tr>
-                                        <td>语言</td>
-                                        <td>语言</td>
-                                        <td>2016-10-10 10:50:59</td>
-                                        <td class="center"><button class="btn btn-yahoo">删除</button></td>
-                                    </tr>
-                                    <tr>
-                                        <td>语言</td>
-                                        <td>社会</td>
-                                        <td>2016-10-10 10:50:59</td>
-                                        <td class="center"><button class="btn btn-yahoo">删除</button></td>
-                                    </tr>
-                                    <tr>
-                                        <td>语言</td>
-                                        <td>语言</td>
-                                        <td>2016-10-10 10:50:59</td>
-                                        <td class="center"><button class="btn btn-yahoo">删除</button></td>
-                                    </tr>
+                                        <tr ng-show="secondLevelCategoryItems==null">
+                                            <td colspan="4" style="background-color: #ffffff">
+                                                <div id="loadingScreen">
+                                                    <img src="img/loading_icon.gif" style="position: relative; margin: auto;">
+                                                </div>
+                                            </td>
+                                        </tr>
+                                        <tr ng-repeat="item in secondLevelCategoryItems" multiple-select-item="secondLevelCategoryItems">
+                                            <td ng-bind="item.firstCategoryName"></td>
+                                            <td ng-bind="item.secondCategoryName"></td>
+                                            <td ng-bind="item.modifyDate | date:'yyyy-MM-dd HH:mm:ss'"></td>
+                                            <td><button class="btn" data-toggle="modal" data-target="#delete" ng-model="selectedSecondLevelCategoryID" ng-click="deleteItem(item)">删除</button></td>
+                                        </tr>
+                                        <div class="modal fade" id="delete" tabindex="-1" role="dialog" aria-labelledby="delModalLabel" aria-hidden="true">
+                                            <div class="modal-dialog">
+                                                <div class="modal-content">
+                                                    <div class="modal-header">
+                                                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                                                        <h4 class="modal-title" id="delModalLabel">删除信息如下：</h4>
+                                                    </div>
+                                                    <div class="modal-body">
+                                                        <p>
+                                                            <label>ID:</label>
+                                                            <label ng-bind="selectedSecondLevelCategoryID"></label>
+                                                        </p>
+                                                        <p>
+                                                            <label>一级分类名:</label>
+                                                            <label ng-bind="selectedSecondLevelCategoryItem.firstCategoryName"></label>
+                                                        </p>
+                                                        <p>
+                                                            <label>二级分类名:</label>
+                                                            <label ng-bind="selectedSecondLevelCategoryItem.secondCategoryName"></label>
+                                                        </p>
+                                                        <p>
+                                                            <label>修改日期:</label>
+                                                            <label ng-bind="selectedSecondLevelCategoryItem.modifyDate | date:'yyyy-MM-dd HH:mm:ss'"></label>
+                                                        </p>
+                                                    </div>
+                                                    <div class="modal-footer">
+                                                        <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                                                        <button type="button" class="btn btn-primary">确定</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </tbody>
                                 </table>
                             </div>
