--- a/src/app/product/product_list.html
+++ b/src/app/product/product_list.html
@@ -69,40 +69,72 @@
                             <div class="row">
                                 <div class="col-lg-3">
                                     <form role="form" style="text-align: right">
-                                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#recommentDiag">推&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;荐</button>
-                                        <div class="modal fade" id="recommentDiag" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                                            <div class="modal-dialog">
-                                                <div class="modal-content">
-                                                    <div class="modal-header">
-                                                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                                                        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-                                                    </div>
-                                                    <div class="modal-body">
-                                                        Hello world!!!
-                                                    </div>
-                                                    <div class="modal-footer">
-                                                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                                        <button type="button" class="btn btn-primary">Save changes</button>
+                                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#confirmDiag" ng-click="actionClickModal('recommend')">推&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;荐</button>
+                                    </form>
+                                </div>
+                                <div class="col-lg-3">
+                                    <form role="form" style="text-align: right">
+                                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#confirmDiag" ng-click="actionClickModal('recommendCanncel')">取消推荐</button>
+                                    </form>
+                                </div>
+                                <div class="col-lg-3">
+                                    <form role="form" style="text-align: right">
+                                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#confirmDiag" ng-click="actionClickModal('online')">上&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;架</button>
+                                    </form>
+                                </div>
+                                <div class="col-lg-3">
+                                    <form role="form" style="text-align: right">
+                                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#confirmDiag" ng-click="actionClickModal('offline')">下&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;架</button>
+                                    </form>
+                                </div>
+                                <div class="modal fade" id="confirmDiag" tabindex="-1" role="dialog" aria-labelledby="confirmModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog">
+                                        <div class="modal-content" style="text-align: left">
+                                            <div class="modal-header">
+                                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                                                <h4 class="modal-title" id="confirmModalLabel">选中{{productItems_selected.length}}项产品</h4>
+                                            </div>
+                                            <div class="modal-body">
+                                                <div class="row" style="padding-top: 20px">
+                                                    <div class="col-lg-12">
+                                                        <div class="table-responsive">
+                                                            <table class="table table-striped table-bordered table-hover">
+                                                                <thead>
+                                                                <tr>
+                                                                    <th>产品名</th>
+                                                                    <th>产品发布状态</th>
+                                                                    <th>修改时间</th>
+                                                                    <th>是否推荐</th>
+                                                                    <th>产品类型</th>
+                                                                </tr>
+                                                                </thead>
+                                                                <tbody>
+                                                                <tr ng-show="productItems_selected.length == 0">
+                                                                    <td colspan="5" style="background-color: #ffffff">
+                                                                        <div style="text-align: center">
+                                                                            <span>没有选择任何产品！</span>
+                                                                        </div>
+                                                                    </td>
+                                                                </tr>
+                                                                <tr ng-repeat="item in productItems_selected" multiple-select-item="productItems_selected">
+                                                                    <td ng-bind="item.productName"></td>
+                                                                    <td ng-bind="item.releaseState"></td>
+                                                                    <td ng-bind="item.modifyDate | date:'yyyy-MM-dd HH:mm:ss'"></td>
+                                                                    <td ng-bind="item.recommend"></td>
+                                                                    <td ng-bind="item.productType"></td>
+                                                                </tr>
+                                                                </tbody>
+                                                            </table>
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                                                <button type="button" class="btn btn-primary" ng-click="actionConfirm()">确定</button>
+                                            </div>
                                         </div>
-                                    </form>
-                                </div>
-                                <div class="col-lg-3">
-                                    <form role="form" style="text-align: right">
-                                        <button type="button" class="btn btn-primary">取消推荐</button>
-                                    </form>
-                                </div>
-                                <div class="col-lg-3">
-                                    <form role="form" style="text-align: right">
-                                        <button type="button" class="btn btn-primary">上&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;架</button>
-                                    </form>
-                                </div>
-                                <div class="col-lg-3">
-                                    <form role="form" style="text-align: right">
-                                        <button type="button" class="btn btn-primary">下&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;架</button>
-                                    </form>
+                                    </div>
                                 </div>
                             </div>
                         </div>
