--- a/src/app/user/user_admin.html
+++ b/src/app/user/user_admin.html
@@ -41,12 +41,12 @@
                                         <td ng-bind="item.babyBirthday | date:'yyyy-MM-dd'"></td>
                                         <td><button class="btn" data-toggle="modal" data-target="#reset" ng-model="selectedUserID" ng-click="resetPWD(item)">重置密码</button></td>
                                     </tr>
-                                    <div class="modal fade" id="reset" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                                    <div class="modal fade" id="reset" tabindex="-1" role="dialog" aria-labelledby="userAdminModalLabel" aria-hidden="true">
                                         <div class="modal-dialog">
                                             <div class="modal-content">
                                                 <div class="modal-header">
                                                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                                                    <h4 class="modal-title" id="myModalLabel">重置密码，会员信息如下：</h4>
+                                                    <h4 class="modal-title" id="userAdminModalLabel">重置密码，会员信息如下：</h4>
                                                 </div>
                                                 <div class="modal-body">
                                                     <p>
